--- a/public/assets/css/components/kanban.css
+++ b/public/assets/css/components/kanban.css
@@ -382,12 +382,6 @@ body .maincontent .priority-text-5 a:link {
 }
 
 .kanbanContent:before {
-    content: '';
-    width: 100%;
-    height: 50%;
-    position: absolute;
-    left: 0;
-    bottom: 0;
 
 }
 
